chore: Update 1.1.1 release blog with yield commit

--- a/blog/2025-03-25.md
+++ b/blog/2025-03-25.md
@@ -16,7 +16,8 @@ React Starter v1.1.1 is now available.
 
 This update includes the following:
 
-- Resolved an issue where `routeLoadOptions` wasn’t returning properly due to its inclusion in an `all()` effect [(b961744d)](https://gitlab.zengenti.com/starter-projects/react-starter/-/commit/b961744d8f3e159e5ebeab28d38a791659153a3f#890e8da1b621f9dc277815b4fcb25b3c918989d0_21_21)
+- Resolved an issue where `routeLoadOptions` wasn’t returning properly due to its inclusion in an `all()` effect [(b961744d)](https://gitlab.zengenti.com/starter-projects/react-starter/-/commit/b961744d8f3e159e5ebeab28d38a791659153a3f#890e8da1b621f9dc277815b4fcb25b3c918989d0_21_21) [(
+0f2e391c)](https://gitlab.zengenti.com/starter-projects/react-starter/-/commit/0f2e391c1b70c574eec118dca8531d073a564de4)
 - Restored support for reverse proxy path wildcards [(fb3b5616)](https://gitlab.zengenti.com/starter-projects/react-starter/-/commit/fb3b56164b6397b03a27775ae8fa4a4c50e87ac2)
 
 <!-- truncate -->
@@ -38,7 +39,7 @@ export default {
     };
 -    return yield all([call(getSiteConfigSaga, ssr), routeLoadOptions]);
 +    yield all([call(getSiteConfigSaga, ssr)]);
-+    return routeLoadOptions;
++    return yield routeLoadOptions;
   },
   onRouteLoaded: function* onRouteLoaded(onRouteLoadedArgs) {
    ...
