chore: Polyfill.io statement blog. Updated metadata of release blog.

--- a/blog/2025-03-25.md
+++ b/blog/2025-03-25.md
@@ -1,6 +1,6 @@
 ---
 title: React Starter - 1.1.1
-description: This is my first post on Docusaurus.
+description: This update resolves a routeLoadOptions issue affecting global options like preventScrollTop and entryLinkDepth, and restores support for reverse proxy path wildcards in development. Check out the full details and fixes.
 slug: starter-release-1-1-1
 authors:
   - name: Tim Breeze
