chore: Update polyfill truncation point. Better polyfill tags.

--- a/blog/2025-03-27.md
+++ b/blog/2025-03-27.md
@@ -6,15 +6,16 @@ authors:
   - name: Tim Breeze
     title: Front End Developer
     image_url: https://www.contensis.com/avatars/1606bb4e-05b2-43e9-b525-92b3b53038c3?h=56&w=56&fit=crop&q=90&f=webp
-tags: [starter, release, update]
+tags: [starter, update, security, fix]
 hide_table_of_contents: false
 ---
 
 In June last year, the Polyfill.io domain was hijacked in a supply chain attack, putting hundreds of thousands of websites at risk. As users of the Polyfill.io service, we issued a client advisory via Slack on June 26, 2024, urging immediate removal or migration.
 
+<!-- truncate -->
+
 This statement is available here for historial purposes as the advice remains relevant today:
 
-<!-- truncate -->
 
 >## Security Alert: Polyfill.io
 >
